--- a/public/404/index.html
+++ b/public/404/index.html
@@ -9,9 +9,9 @@
 <body>
 	<center>
         <div>
-            <h2>Мы не знаем, что вы искали</h2>
-            <p>Но здесь этого определенно нет</p>
+            <h2>You looked for something.</h2>
+            <p>It's certainly not here.</p>
         </div>
-		<img src="404.png">
+		<img src="4041.png">
 	</center>
 </body> 
