--- a/public/404/index.html
+++ b/public/404/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>404</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" type="text/css" href="404.css">
+    <link rel="stylesheet" type="text/css" href="/public/404.css">
 </head>
 
 <body>
